--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,3 +1,8 @@
 <div>
+  <div><img id='beerglass' src='images/beer.png' /> </div>
+
+
+<button class="btnclick"><a href="/beers"> Check the Beers!</a></button>
+<button class="btnclick"> <a href="/random-beer"> Check a Random Beer! </a></button>
 
 </div>
